--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "ext-openssl": "*",
         "ext-mbstring": "*",
         "monolog/monolog": "^1.23",
-        "cocur/slugify": "^3.1"
+        "cocur/slugify": "^3.1",
+        "theseer/directoryscanner": "^1.3",
+        "symfony/filesystem": "^3.4.17"
     },
     "require-dev": {
         "kint-php/kint": "^3.0"
