--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "monolog/monolog": "^1.23",
         "cocur/slugify": "^3.1",
         "theseer/directoryscanner": "^1.3",
-        "symfony/filesystem": "^3.4.17"
+        "symfony/filesystem": "^3.4.17",
+        "alchemy/zippy": "^0.4.9"
     },
     "require-dev": {
         "kint-php/kint": "^3.0"
