--- a/.gitignore
+++ b/.gitignore
@@ -120,5 +120,12 @@ GitHub.sublime-settings
 ## Composer
 /vendor/
 composer.lock
-/logs/*
-!/logs/index.html
+storage/*
+storage/logs/*
+storage/cache/*
+!storage/.htaccess
+!storage/index.html
+!storage/logs/.htaccess
+!storage/logs/index.html
+!storage/cache/.htaccess
+!storage/cache/index.html
