--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "monolog/monolog": "^1.23",
         "cocur/slugify": "^3.1",
         "theseer/directoryscanner": "^1.3",
+        "symfony/process": "^3.4.17",
         "symfony/filesystem": "^3.4.17",
         "alchemy/zippy": "^0.4.9"
     },
