--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,12 @@
         "ext-openssl": "*",
         "ext-mbstring": "*",
         "monolog/monolog": "^1.23",
-        "cocur/slugify": "^3.1",
+        "cocur/slugify": "^1.4.1",
         "theseer/directoryscanner": "^1.3",
         "symfony/process": "^3.4.17",
         "symfony/filesystem": "^3.4.17",
+        "symfony/polyfill-mbstring": "^1.9.0",
+        "doctrine/collections": "1.3.0",
         "alchemy/zippy": "^0.4.9"
     },
     "require-dev": {
