--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,17 @@
         "alchemy/zippy": "^0.4.9"
     },
     "require-dev": {
-        "kint-php/kint": "^3.0"
+        "kint-php/kint": "^3.0",
+        "phpunit/phpunit": ">=4.8 < 6.0"
     },
     "autoload": {
         "psr-4": {
             "nguyenanhung\\MyDebug\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "UnitTests/"
         }
     }
 }
