--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,7 @@
         }
     ],
     "require": {
-        "ext-curl": "*",
         "ext-json": "*",
-        "ext-iconv": "*",
-        "ext-openssl": "*",
-        "ext-mbstring": "*",
         "monolog/monolog": "^1.23",
         "cocur/slugify": "^1.4.1",
         "theseer/directoryscanner": "^1.3",
@@ -33,8 +29,14 @@
         "alchemy/zippy": "^0.4.9"
     },
     "require-dev": {
-        "kint-php/kint": "^3.0",
-        "phpunit/phpunit": ">=4.8 < 6.0"
+        "kint-php/kint": "^3.0"
+    },
+    "suggest": {
+        "ext-curl": "Needed to support cURL",
+        "ext-json": "Needed to support JSON",
+        "ext-iconv": "Needed to support ICONV",
+        "ext-mbstring": "Needed to support MbString",
+        "ext-openssl": "Needed to support OpenSSL"
     },
     "autoload": {
         "psr-4": {
