--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "theseer/directoryscanner": "^1.3",
         "symfony/process": "^3.4.17",
         "symfony/filesystem": "^3.4.17",
-        "symfony/polyfill-mbstring": "^1.9.0",
+        "symfony/polyfill": "^1.9.0",
         "doctrine/collections": "1.3.0",
         "alchemy/zippy": "^0.4.9"
     },
