--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
     ],
     "require": {
         "ext-json": "*",
-        "monolog/monolog": "^1.23",
-        "cocur/slugify": "^1.4.1",
+        "monolog/monolog": "^2.0",
+        "cocur/slugify": "^4.0",
         "theseer/directoryscanner": "^1.3",
-        "symfony/process": "^3.4",
-        "symfony/filesystem": "^3.4",
-        "symfony/polyfill": "^1.9",
-        "doctrine/collections": "1.3.0",
-        "alchemy/zippy": "^0.4.9"
+        "symfony/process": "^4.4",
+        "symfony/filesystem": "^4.4",
+        "symfony/polyfill": "^1.18",
+        "doctrine/collections": "^1.4",
+        "alchemy/zippy": "^0.4"
     },
     "require-dev": {
         "kint-php/kint": "^3.0"
