Xoá 1 số interface ko cần thiết

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "alchemy/zippy": "^0.4"
     },
     "require-dev": {
+        "ext-zip": "*",
         "kint-php/kint": "^3.0"
     },
     "suggest": {
