--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,13 @@
     ],
     "require": {
         "ext-json": "*",
-        "monolog/monolog": "^2.0",
+        "monolog/monolog": "^2.2",
         "cocur/slugify": "^4.0",
         "theseer/directoryscanner": "^1.3",
-        "symfony/process": "^4.4",
-        "symfony/filesystem": "^4.4",
-        "symfony/polyfill": "^1.18",
-        "doctrine/collections": "^1.4",
-        "alchemy/zippy": "^0.4"
+        "symfony/process": "^5.2",
+        "symfony/filesystem": "^5.2",
+        "symfony/polyfill": "^1.22",
+        "doctrine/collections": "^1.6"
     },
     "require-dev": {
         "ext-zip": "*",
