--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,11 @@
     ],
     "require": {
         "ext-json": "*",
+        "ext-mbstring": "*",
         "monolog/monolog": "^2.2",
         "cocur/slugify": "^4.0",
         "theseer/directoryscanner": "^1.3",
-        "symfony/process": "^5.2",
-        "symfony/filesystem": "^5.2",
-        "symfony/polyfill": "^1.22",
-        "doctrine/collections": "^1.6"
-    },
-    "require-dev": {
-        "ext-zip": "*",
-        "kint-php/kint": "^3.0"
+        "symfony/filesystem": "^5.2"
     },
     "suggest": {
         "ext-curl": "Needed to support cURL",
@@ -41,11 +35,6 @@
     "autoload": {
         "psr-4": {
             "nguyenanhung\\MyDebug\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "MyDebugTests\\": "tests/"
         }
     }
 }
