--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
     "require": {
         "ext-json": "*",
         "ext-mbstring": "*",
-        "monolog/monolog": "^2.2",
+        "monolog/monolog": "^2.3",
         "cocur/slugify": "^4.0",
         "theseer/directoryscanner": "^1.3",
-        "symfony/filesystem": "^5.2"
+        "symfony/filesystem": "^5.3 || ^4.4"
     },
     "suggest": {
         "ext-curl": "Needed to support cURL",
