--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         }
     ],
     "require": {
+        "php": "^7.0||^8.0",
         "ext-json": "*",
         "ext-mbstring": "*",
         "monolog/monolog": "^2.3",
