--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
         }
     ],
     "require": {
-        "php": "^7.1 || ^8.0",
+        "php": "^5.6 || ^7.1 || ^8.0",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "monolog/monolog": "^1.26 || ^2.0",
-        "cocur/slugify": "^4.0",
+        "nguyenanhung/benchmark": "^1.0",
+        "monolog/monolog": "^2.0 || ^1.26",
+        "cocur/slugify": "^4.0 || ^3.0",
         "theseer/directoryscanner": "^1.3",
-        "symfony/filesystem": "^5.3 || ^4.4"
+        "symfony/filesystem": "^5.3 || ^4.4 || ^3.4"
     },
     "suggest": {
         "ext-json": "Needed to support JSON",
