--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
         }
     ],
     "require": {
-        "php": "^7.0 || ^8.0",
+        "php": ">=8.1",
         "ext-json": "*",
         "ext-mbstring": "*",
         "nguyenanhung/benchmark": "^2.0 || ^1.0",
         "nguyenanhung/filesystem-helper": "^2.0 || ^1.0",
         "nguyenanhung/slug-helper": "^2.0 || ^1.0",
-        "monolog/monolog": "^2.0 || ^1.26"
+        "monolog/monolog": "^3.1"
     },
     "require-dev": {
         "kint-php/kint": ">=3.0"
