--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
         "nguyenanhung/benchmark": "^2.0 || ^1.0",
         "nguyenanhung/filesystem-helper": "^2.0 || ^1.0",
         "nguyenanhung/slug-helper": "^2.0 || ^1.0",
-        "monolog/monolog": "^3.1"
+        "monolog/monolog": "^3.2"
     },
     "require-dev": {
-        "kint-php/kint": ">=3.0"
+        "kint-php/kint": "^4.0 || ^3.0"
     },
     "suggest": {
         "ext-json": "Needed to support JSON",
