--- a/composer.json
+++ b/composer.json
@@ -27,17 +27,22 @@
         "monolog/monolog": "^2.0 || ^1.26"
     },
     "require-dev": {
-        "kint-php/kint": ">=3.0"
+        "kint-php/kint": ">=3.0",
+        "sentry/sdk": "^3.0 || ^2.0"
     },
     "suggest": {
         "ext-json": "Needed to support JSON",
         "ext-iconv": "Needed to support ICONV",
         "ext-mbstring": "Needed to support MbString",
-        "ext-openssl": "Needed to support OpenSSL"
+        "ext-openssl": "Needed to support OpenSSL",
+        "sentry/sdk": "Need support for Logging with Sentry"
     },
     "autoload": {
         "psr-4": {
             "nguyenanhung\\MyDebug\\": "src/"
-        }
+        },
+        "files": [
+            "helpers/sentry.php"
+        ]
     }
 }
