--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -29,7 +29,7 @@ jobs:
                     key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
                     restore-keys: ${{ runner.os }}-composer-
             -   name: Install dependencies
-                run: composer install --no-progress --prefer-dist --optimize-autoloader
+                run: composer install --no-progress --prefer-dist --optimize-autoloader --ignore-platforms
             -   name: Test class Logger
                 run: php ./test/test_logger.php
             -   name: Test class Utils
