--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -26,7 +26,7 @@ jobs:
                     key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
                     restore-keys: ${{ runner.os }}-composer-
             -   name: Install dependencies
-                run: composer install --no-progress --prefer-dist --optimize-autoloader --ignore-platform-reqs
+                run: composer install --no-progress --prefer-dist --optimize-autoloader
             -   name: Test class Logger
                 run: php ./test/test_logger.php
             -   name: Test class Utils
