--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -23,10 +23,10 @@ jobs:
                 uses: actions/cache@v3
                 with:
                     path: ${{ steps.composer-cache.outputs.dir }}
-                    key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+                    key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
                     restore-keys: ${{ runner.os }}-composer-
             -   name: Install dependencies
-                run: composer install --no-progress --prefer-dist --optimize-autoloader --no-dev
+                run: composer install --no-dev --no-progress --prefer-dist --optimize-autoloader
             -   name: Test class Logger
                 run: php ./test/test_logger.php
             -   name: Test class Utils
