--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
         "nguyenanhung/benchmark": "^2.0 || ^1.0",
         "nguyenanhung/filesystem-helper": "^2.0 || ^1.0",
         "nguyenanhung/slug-helper": "^2.0 || ^1.0",
-        "monolog/monolog": "^2.0 || ^1.26"
+        "monolog/monolog": "^2.0 || ^1.27"
     },
     "require-dev": {
-        "kint-php/kint": ">=3.0"
+        "kint-php/kint": "^5.0 || ^4.0 || ^3.0 || ^2.0 || ^1.0"
     },
     "suggest": {
         "ext-json": "Needed to support JSON",
