--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -5,12 +5,12 @@ jobs:
     build:
         strategy:
             matrix:
-                operating-system: [ ubuntu-latest, windows-latest, macos-latest ]
-                php-versions: [ '8.1' ]
+                operating-system: [ ubuntu-latest, macos-latest ]
+                php-versions: [ '8.1', '8.2' ]
         runs-on: ${{ matrix.operating-system }}
         steps:
             -   name: Checkout
-                uses: actions/checkout@v2
+                uses: actions/checkout@v3
             -   name: Setup PHP, with composer and extensions
                 uses: shivammathur/setup-php@v2 # From https://github.com/shivammathur/setup-php
                 with:
@@ -18,14 +18,12 @@ jobs:
                     extensions: mbstring, intl, curl, dom, pdo, json, session, sockets, openssl
                     coverage: xdebug #optional
             -   name: Get composer cache directory
-                id: composercache
-                run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-            -   name: Cache composer dependencies
-                uses: actions/cache@v2
+                id: composer-cache
+                run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+            -   name: Cache dependencies
+                uses: actions/cache@v3
                 with:
-                    path: ${{ steps.composercache.outputs.dir }}
-                    # Use composer.json for key, if composer.lock is not committed.
-                    # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+                    path: ${{ steps.composer-cache.outputs.dir }}
                     key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
                     restore-keys: ${{ runner.os }}-composer-
             -   name: Install dependencies
