--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": ">=5.3",
         "ext-json": "*",
         "ext-mbstring": "*",
         "nguyenanhung/benchmark": "^1.0",
         "nguyenanhung/filesystem-helper": "^1.0",
         "nguyenanhung/slug-helper": "^1.0",
-        "monolog/monolog": "^2.0 || ^1.26"
+        "monolog/monolog": "^1.12"
     },
     "require-dev": {
         "kint-php/kint": ">=3.0"
