--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "ext-json": "Needed to support JSON",
         "ext-iconv": "Needed to support ICONV",
         "ext-mbstring": "Needed to support MbString",
-        "ext-openssl": "Needed to support OpenSSL"
+        "ext-openssl": "Needed to support OpenSSL",
+        "sentry/sdk": "Need support for Logging with Sentry"
     },
     "autoload": {
         "psr-4": {
