--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,35 +2,35 @@
 name: Testing PHP Package Debug & Logging by HungNG
 on: [ push, pull_request ]
 jobs:
-    build:
-        strategy:
-            matrix:
-                operating-system: [ ubuntu-latest, macos-latest ]
-                php-versions: [ '8.1', '8.2' ]
-        runs-on: ${{ matrix.operating-system }}
-        steps:
-            -   name: Checkout
-                uses: actions/checkout@v3
-            -   name: Setup PHP, with composer and extensions
-                uses: shivammathur/setup-php@v2 # From https://github.com/shivammathur/setup-php
-                with:
-                    php-version: ${{ matrix.php-versions }}
-                    extensions: mbstring, intl, curl, dom, pdo, json, session, sockets, openssl
-                    coverage: xdebug #optional
-            -   name: Get composer cache directory
-                id: composer-cache
-                run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
-            -   name: Cache dependencies
-                uses: actions/cache@v3
-                with:
-                    path: ${{ steps.composer-cache.outputs.dir }}
-                    key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-                    restore-keys: ${{ runner.os }}-composer-
-            -   name: Install dependencies
-                run: composer install --no-progress --prefer-dist --optimize-autoloader
-            -   name: Test class Logger
-                run: php ./test/test_logger.php
-            -   name: Test class Utils
-                run: php ./test/test_utils.php
-            -   name: Test class Benchmark
-                run: php ./test/test_benchmark.php
+  build:
+    strategy:
+      matrix:
+        operating-system: [ ubuntu-latest, macos-latest ]
+        php-versions: [ '8.1', '8.2','8.3' ]
+    runs-on: ${{ matrix.operating-system }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2 # From https://github.com/shivammathur/setup-php
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: mbstring, intl, curl, dom, pdo, json, session, sockets, openssl
+          coverage: xdebug #optional
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+      - name: Install dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
+      - name: Test class Logger
+        run: php ./test/test_logger.php
+      - name: Test class Utils
+        run: php ./test/test_utils.php
+      - name: Test class Benchmark
+        run: php ./test/test_benchmark.php
