--- a/composer.json
+++ b/composer.json
@@ -1,47 +1,44 @@
 {
-    "name": "nguyenanhung/my-debug",
-    "type": "library",
-    "description": "My Debug, Logger Library",
-    "keywords": [
-        "debug",
-        "logger",
-        "log"
-    ],
-    "homepage": "https://github.com/nguyenanhung/my-debug",
-    "license": "GPL-3.0",
-    "authors": [
-        {
-            "name": "Nguyen An Hung",
-            "email": "dev@nguyenanhung.com",
-            "homepage": "https://nguyenanhung.com",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": "^7.0 || ^8.0",
-        "ext-json": "*",
-        "ext-mbstring": "*",
-        "nguyenanhung/benchmark": "^2.0 || ^1.0",
-        "nguyenanhung/filesystem-helper": "^2.0 || ^1.0",
-        "nguyenanhung/slug-helper": "^2.0 || ^1.0",
-        "monolog/monolog": "^2.0 || ^1.27"
-    },
-    "require-dev": {
-        "kint-php/kint": "^5.0 || ^4.0 || ^3.0 || ^2.0 || ^1.0"
-    },
-    "suggest": {
-        "ext-json": "Needed to support JSON",
-        "ext-iconv": "Needed to support ICONV",
-        "ext-mbstring": "Needed to support MbString",
-        "ext-openssl": "Needed to support OpenSSL",
-        "sentry/sdk": "Need support for Logging with Sentry"
-    },
-    "autoload": {
-        "psr-4": {
-            "nguyenanhung\\MyDebug\\": "src/"
-        },
-        "files": [
-            "helpers/sentry.php"
-        ]
-    }
+	"name": "nguyenanhung/my-debug",
+	"type": "library",
+	"description": "My Debug, Logger Library",
+	"keywords": [
+		"debug",
+		"logger",
+		"log"
+	],
+	"homepage": "https://github.com/nguyenanhung/my-debug",
+	"license": "GPL-3.0",
+	"authors": [
+		{
+			"name": "Nguyen An Hung",
+			"email": "dev@nguyenanhung.com",
+			"homepage": "https://nguyenanhung.com",
+			"role": "Developer"
+		}
+	],
+	"require": {
+		"php": ">=8.1",
+		"ext-json": "*",
+		"ext-mbstring": "*",
+		"nguyenanhung/benchmark": "^2.0 || ^1.0",
+		"nguyenanhung/filesystem-helper": "^2.0 || ^1.0",
+		"nguyenanhung/slug-helper": "^2.0 || ^1.0",
+		"monolog/monolog": "^3.0"
+	},
+	"require-dev": {
+		"kint-php/kint": ">=3.0"
+	},
+	"suggest": {
+		"ext-json": "Needed to support JSON",
+		"ext-iconv": "Needed to support ICONV",
+		"ext-mbstring": "Needed to support MbString",
+		"ext-openssl": "Needed to support OpenSSL",
+		"sentry/sdk": "Need support for Logging with Sentry"
+	},
+	"autoload": {
+		"psr-4": {
+			"nguyenanhung\\MyDebug\\": "src/"
+		}
+	}
 }
