--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     strategy:
       matrix:
-        operating-system: [ 'ubuntu-latest', 'macos-latest' ]
+        operating-system: [ 'ubuntu-latest' ]
         php-versions: [ '8.1', '8.2', '8.3' ]
     runs-on: ${{ matrix.operating-system }}
     steps:
